# mind

./: .bench-baseline-2026-04-27.txt  .bench-baseline-2026-04-28-pratt.txt  .bench-baseline-2026-05-17-phase10-6.txt  .bench-baseline-2026-05-17-phase10-7.txt  .bench-baseline-2026-05-18-rfc0005.txt  .bench-baseline-2026-06-01-correctness.txt  .bench-pre-pratt.txt  .editorconfig  .gitattributes  .gitignore  .sembleignore  ANATOMY.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARK_PRS_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_FILE_STRUCTURE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP_INSTRUCTIONS.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-MIT  MINDLANG_DEV_WEBSITE_PROMPT.txt  MIND_PATENT_TECHNICAL_DOCUMENTATION.txt  MIND_SPEC_PERFORMANCE_DOCUMENTATION.txt  Mind.toml  PATENT_SUMMARY_FOR_OTHER_CHAT.txt  PR_DESCRIPTION.md  README.md  RELEASING.md  SECURITY.md  STATUS.md  a.out  bounties.md  build.rs  clippy.toml  deny.toml  plugin.json  (+2 more)
.arch-mind/: key.local  last_summary.json  rules.mind  scan.json
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bounty_claim.md  bug_report.md  feature_request.md
.github/workflows/: bench-gate.yml  cargo-deny.yml  ci.yml  crypto-vectors.yml  docs-claims.yml  link-check.yml  mindcraft.yml  release-binary.yml  release-drafter.yml  release.yml
.wrangler/cache/: wrangler-account.json
agents/: mind-developer.md
audits/: arch-mind-2026-05-18-post-phase-6-1.json  arch-mind-v0.4.0.json  arch-mind-v0.4.1.json  arch-mind-v0.4.2.json  arch-mind-v0.4.3.json  arch-mind-v0.4.4.json
bench/: RESULTS-int8-2026-06-08.md  matmul_det_bench.mind
bench/fft/: .gitignore  README.md  RESULTS-fft-2026-06-15.md  build.sh  fft_driver.c  fft_ref.c  fft_verify.c  harness.c
bench/fft-gpu/: .gitignore  RESULTS-fft-gpu-2026-06-15.md  build.sh  cufft_context.cu  fft_q16_gpu.cu  harness_gpu.cu
benches/: autodiff.rs  bench_aes_gcm.rs  bench_ecdsa_p256.rs  bench_hkdf.rs  bench_hpack.rs  bench_http2_frame.rs  bench_keccak.rs  bench_mlkem768.rs  bench_rsa_pss.rs  bench_sha256.rs  bench_tls13_record.rs  bench_x25519.rs  bench_x509.rs  cerebras_stencil.rs  compiler.rs  cross_module.rs  det_matmul_i16.rs  det_matmul_i8.rs  det_matmul_q16.rs  det_matmul_q16_mt.rs  fft_q16.rs  mindcraft_fmt.rs  operations.rs  parser_throughput.rs  shapes.rs  simple_benchmarks.rs  std_surface.rs  tensor_compute.rs
benchmarks/: BENCHMARK_RESULTS.md  COPILOT_REVIEW_FIXES.md  FINAL_PATENT_RESULTS.md  MIC_MAP_BENCHMARK_README.md  PATENT_BENCHMARKS.md  README.md  RUN_GUIDE.md  SAME_MACHINE_BENCHMARKS.md  format_benchmark.py  mic_benchmark.py  mic_map_benchmark_results.json  mic_map_benchmark_v2.py  resnet.md  run_all_benchmarks.sh  scientific_benchmark.py  scientific_benchmark_raw.py
benchmarks/autograd_comparison/: README.md  README_REAL.md  autograd_results.json  benchmark_autograd.py  benchmark_python_bindings.py  benchmark_real_autograd.py  real_autograd_results.json  (+1 more)
config/: capabilities.toml
docs/: INDEPENDENCE_ROADMAP.md  README.md  VERIFICATION_APPARATUS.md  architecture.md  autodiff.md  benchmarking.md  benchmarks.md  byte-store-migration.md  cli.md  determinism.md  errors.md  ffi-runtime.md  gpu.md  install.md  ir-mlir.md  ir-stability.md  ir.md  migration-roadmap.md  mlir-lowering.md  ops.md  optimization-frontier.md  performance.md  reap-pruning.md  roadmap.md  runs-burndown-roadmap.md  security.md  self-host-trace-hash-port.md  shapes.md  sparse-tensor-types.md  type-system.md  version-matrix.md  versioning.md  whitepaper.md
examples/: README.md  anthropobrot.mind  autodiff_demo.mind  cnn_classifier.mind  collatz.mind  cos_dottie.mind  dottie_collapse.mind  fft_q16.mind  fft_signal.mind  galperin_pi.mind  gauss_collapse.mind  geometric_collapse.mind  halbach_q16.mind  hello_stdlib.mind  hello_tensor.mind  lorenz_f64.mind  lorenz_q16.mind  mandelbrot.mind  mandelbrot_strict.mind  mlir_pipeline_demo.sh  policy.mind  remizov_benchmark.mind  remizov_feynman.mind  remizov_gpu.mind  remizov_inverse.mind  remizov_solver.mind  remizov_verify.mind  tiny_edge_model.mind  xrm_inference.mind
runtime-support/: mind_intrinsics.c
scripts/: check_claims.py  check_no_ai_attribution.sh  install.ps1  install.sh  preflight.sh  quick_perf.sh  release-runtime.sh  run_crypto_vectors.sh
scripts/mind-vs-rust/: .gitignore  Cargo.toml  run.sh
scripts/mind-vs-rust/src/: main.rs
src/: conformance.rs  lib.rs  linalg.rs  main.rs  pipeline.rs  python.rs  runtime_interface.rs
std/: aes_gcm.mind  arena.mind  async.mind  base64.mind  blas.mind  chacha20_poly1305.mind  cli.mind  ecdsa_p256.mind  env.mind  fs.mind  hkdf.mind  hpack.mind  http.mind  http2_frame.mind  io.mind  io_canon.mind  iouring.mind  json.mind  keccak.mind  llvm.mind  map.mind  mlir.mind  mlkem768.mind  net.mind  process.mind  reactor.mind  regex.mind  ring.mind  rsa_pss.mind  sha256.mind  sha512.mind  string.mind  time.mind  tls13_finished.mind  tls13_handshake.mind  tls13_keyschedule.mind  tls13_record.mind  toml.mind  tui.mind  vec.mind  (+3 more)
tests/: CONFORMANCE_TESTS.md  _ref_mic3_dump.rs  alias_miscompile_run.rs  array_ctor_push_get_run.rs  array_surface_run.rs  autodiff.rs  autodiff_preview.rs  bare_variant_ctor_run.rs  bimap_derive.rs  blas_smoke.rs  blas_vec_q16_smoke.rs  blas_vec_smoke.rs  bool_literal_value_run.rs  build_run_runnable_blocker_gate.rs  bytes_buffer_run.rs  bytes_fixed_into_vec_run.rs  bytes_zero_run.rs  cerebras_stencil_tile.rs  chacha20_poly1305_smoke.rs  char_literal_run.rs  cli_buffers.rs  cli_build.rs  cli_eval.rs  cli_exec.rs  cli_tensor.rs  collection_ctor_run.rs  collection_mutation_expr_position_run.rs  compound_assign.rs  cond_truthiness.rs  conformance.rs  const_folding.rs  continue_in_match_arm_run.rs  conv2d_exec.rs  conv2d_grad.rs  conv2d_types.rs  cross_module.rs  cross_module_cdylib_compose.rs  cross_module_enum_run.rs  cross_module_field_access_run.rs  cross_substrate_identity.rs  (+257 more)
tools/: add_copyright_headers.py  bench_gate.py  cargo-deny-sanitize.sh  run_bench_gate.sh
(+635 files in other folders)
