[package]
name = "mind"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
authors = ["STARGA Inc."]
description = "The native language for intelligent systems"
repository = "https://github.com/star-ga/mind"
homepage = "https://github.com/star-ga/mind"
documentation = "https://github.com/star-ga/mind/tree/main/docs"
readme = "README.md"
license = "Apache-2.0"
default-run = "mind"
keywords = ["ai", "machine-learning", "compiler", "tensor", "autodiff"]
categories = ["compilers", "science"]
exclude = ["assets/", "benchmarks/", "examples/"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
libloading = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = { version = "6", optional = true }
tempfile = "3"
toml = "0.8"
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
sha2 = { version = "0.10", optional = true }
dirs = "5"
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
which = "6"
libloading = "0.8"
sha2 = "0.10"

[lib]
name = "libmind"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mind"
path = "src/main.rs"

[[bin]]
name = "mindc"
path = "src/bin/mindc.rs"

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "shapes"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "autodiff"
harness = false
required-features = ["autodiff"]

[[bench]]
name = "cross_module"
harness = false
required-features = ["cross-module-imports"]

[[bench]]
name = "std_surface"
harness = false
required-features = ["std-surface", "mlir-lowering"]

[[bench]]
name = "simple_benchmarks"
harness = false

[[bench]]
name = "cerebras_stencil"
harness = false

[[bench]]
name = "mindcraft_fmt"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
# Reduce codegen units to prevent LNK1318 (too many PDB files) on Windows
codegen-units = 16
split-debuginfo = "packed"

[profile.test]
inherits = "dev"
# Disable debug info for tests to avoid Windows LNK1318 PDB errors
codegen-units = 1
debug = false

[features]
default = []
autodiff = []
# Compile-time phase instrumentation. OFF by default and fully cfg-gated, so
# the frozen frontend criterion baselines and the bit-identity hot path incur
# ZERO cost — the timing code does not exist in a default build. Build with
# `--features compile-timings` and set `MIND_TIMINGS=1` to print a per-phase
# waterfall (parse / typecheck / ir-lower / verify+canon) to stderr.
compile-timings = []
cpu-buffers = []
cpu-exec = ["cpu-buffers"]
cpu-conv = ["cpu-exec"]
mlir = []
mlir-lowering = []
# mlir_backend / llvm: removed 2026-05-21. The melior + inkwell crates
# were declared optional but never imported by any compiled code (the
# production codegen path emits MLIR text and shells to mlir-opt/llc/clang
# subprocesses — see docs/mindcraft/rfc0010-phase-ghi-migration-plan.md §0).
mlir-subprocess = ["which"]
mlir-exec = ["mlir-subprocess"]
mlir-jit = ["libloading"]
mlir-gpu = []
mlir-build = ["mlir-subprocess"]
ffi-c = ["libc"]
ffi-c-user = []  # RFC 0002 deliverable 2+: emit `mind_fn_<name>_invoke` C-ABI wrappers for IRModule.exports
# `cross-module-imports` bundles the real std/*.mind sources (see
# src/project/stdlib.rs) and parses them at resolve time. Those sources are
# written in the std-surface language (`while`, `region`, …), whose parser
# arms are gated behind `std-surface`. Resolving the bundled stdlib therefore
# requires the std-surface parser — without the dependency, 7 of the 15
# bundled modules silently fail to parse under a cross-module-imports-only
# build. Both features stay non-default, so the default-build byte-identity
# hot path is untouched.
cross-module-imports = ["std-surface"]  # Phase 10.6 item 9 / Phase 15: `use crate::x::y` module table + resolver
std-surface = []  # RFC 0005 Phase 0: generic Instr::Call -> MLIR func.call lowering (i64 ABI)
ffi-examples = []
pkg = ["tar", "flate2", "sha2"]
registry = []
python-bindings = ["pyo3"]
aot = ["mlir-build", "mlir-lowering", "autodiff"]
full = ["aot", "autodiff", "cpu-exec", "cpu-conv", "pkg", "ffi-c"]

[build-dependencies]
cc = "1"
