[package]
name = "mind"
version = "0.10.1"
edition = "2024"
rust-version = "1.85"
authors = ["STARGA Inc."]
description = "The native language for intelligent systems"
repository = "https://github.com/star-ga/mind"
homepage = "https://github.com/star-ga/mind"
documentation = "https://github.com/star-ga/mind/tree/main/docs"
readme = "README.md"
license = "Apache-2.0"
default-run = "mind"
keywords = ["ai", "machine-learning", "compiler", "tensor", "autodiff"]
categories = ["compilers", "science"]
exclude = ["assets/", "benchmarks/", "examples/"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
libloading = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = { version = "6", optional = true }
tempfile = "3"
toml = "0.8"
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
sha2 = { version = "0.10", optional = true }
dirs = "5"
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
# Post-quantum ML-DSA (FIPS-204) signing for the evidence chain (RFC 0021 §6).
# OPTIONAL + off by default so the default compiler build keeps its minimal
# dependency surface and the determinism/keystone gate never compiles it. This
# is a vetted, pure-Rust FIPS-204 implementation (integritychain/fips204) — we do
# NOT reimplement the lattice math. `default-features = false` drops the OS-RNG
# path: signing is fully deterministic via keygen_from_seed + try_sign_with_seed.
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
which = "6"
libloading = "0.8"
sha2 = "0.10"

[lib]
name = "libmind"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mind"
path = "src/main.rs"

[[bin]]
name = "mindc"
path = "src/bin/mindc.rs"

# The statement-keyword recogniser equivalence/determinism gate exercises the
# std-surface-gated statements (while / loop / region / break / continue), so it
# only builds meaningfully with `std-surface`. Declared explicitly with
# `required-features` so `cargo test --no-default-features` (a CI job) skips it
# instead of compiling a build where those keywords fall through to the
# expression path and the equivalence assertions fail.
[[test]]
name = "stmt_keyword_recognizer"
required-features = ["std-surface"]

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "shapes"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "autodiff"
harness = false
required-features = ["autodiff"]

[[bench]]
name = "cross_module"
harness = false
required-features = ["cross-module-imports"]

[[bench]]
name = "std_surface"
harness = false
required-features = ["std-surface", "mlir-lowering"]

[[bench]]
name = "simple_benchmarks"
harness = false

# Parse-only throughput over the real self-host source. Separate target from
# `compiler` on purpose: tools/bench_gate.py freezes `--bench compiler`, so a
# new measurement instrument here cannot perturb the frozen baseline.
[[bench]]
name = "parser_throughput"
harness = false
required-features = ["std-surface"]

[[bench]]
name = "cerebras_stencil"
harness = false

[[bench]]
name = "mindcraft_fmt"
harness = false

[[bench]]
name = "fft_q16"
harness = false

[[bench]]
name = "det_matmul_q16"
harness = false

[[bench]]
name = "det_matmul_q16_mt"
harness = false

[[bench]]
name = "det_matmul_i16"
harness = false

[[bench]]
name = "det_matmul_i8"
harness = false

# Crypto / protocol primitive throughput benches (the provable HTTP stack).
[[bench]]
name = "bench_sha256"
harness = false

[[bench]]
name = "bench_keccak"
harness = false

[[bench]]
name = "bench_aes_gcm"
harness = false

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_x25519"
harness = false

[[bench]]
name = "bench_mlkem768"
harness = false

[[bench]]
name = "bench_rsa_pss"
harness = false

[[bench]]
name = "bench_ecdsa_p256"
harness = false

[[bench]]
name = "bench_x509"
harness = false

[[bench]]
name = "bench_hpack"
harness = false

[[bench]]
name = "bench_http2_frame"
harness = false

[[bench]]
name = "bench_tls13_record"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
# Reduce codegen units to prevent LNK1318 (too many PDB files) on Windows
codegen-units = 16
split-debuginfo = "packed"

[profile.test]
inherits = "dev"
# Disable debug info for tests to avoid Windows LNK1318 PDB errors
codegen-units = 1
debug = false

[features]
# Stage 2 — promote the high-level surface to default. `std-surface` carries the
# 10 verified-executing bricks (match/enum/Option/String/struct-field/method-as-
# field/method-with-args-UFCS); the unpromoted constructs (aggregate Tuple
# returns, region{}) are re-gated behind `std-surface-experimental` and FAIL LOUD
# by default (never silent const-0). Keystone byte-identity is preserved: the
# keystone test always builds with `std-surface` explicitly, so this flip changes
# zero keystone bytes. `--no-default-features` restores the low-level-only subset.
default = ["std-surface"]
autodiff = []
# Compile-time phase instrumentation. OFF by default and fully cfg-gated, so
# the frozen frontend criterion baselines and the bit-identity hot path incur
# ZERO cost — the timing code does not exist in a default build. Build with
# `--features compile-timings` and set `MIND_TIMINGS=1` to print a per-phase
# waterfall (parse / typecheck / ir-lower / verify+canon) to stderr.
compile-timings = []
cpu-buffers = []
cpu-exec = ["cpu-buffers"]
cpu-conv = ["cpu-exec"]
mlir = []
mlir-lowering = []
# mlir_backend / llvm: removed 2026-05-21. The melior + inkwell crates
# were declared optional but never imported by any compiled code (the
# production codegen path emits MLIR text and shells to mlir-opt/llc/clang
# subprocesses — see docs/mindcraft/rfc0010-phase-ghi-migration-plan.md §0).
mlir-subprocess = ["which"]
mlir-exec = ["mlir-subprocess"]
mlir-jit = ["libloading"]
mlir-gpu = []
mlir-build = ["mlir-subprocess"]
ffi-c = ["libc"]
ffi-c-user = []  # RFC 0002 deliverable 2+: emit `mind_fn_<name>_invoke` C-ABI wrappers for IRModule.exports
# `cross-module-imports` bundles the real std/*.mind sources (see
# src/project/stdlib.rs) and parses them at resolve time. Those sources are
# written in the std-surface language (`while`, `region`, …), whose parser
# arms are gated behind `std-surface`. Resolving the bundled stdlib therefore
# requires the std-surface parser — without the dependency, 7 of the 15
# bundled modules silently fail to parse under a cross-module-imports-only
# build. Both features stay non-default, so the default-build byte-identity
# hot path is untouched.
cross-module-imports = ["std-surface"]  # Phase 10.6 item 9 / Phase 15: `use crate::x::y` module table + resolver
std-surface = []  # RFC 0005 Phase 0: generic Instr::Call -> MLIR func.call lowering (i64 ABI)
# Per-construct std-surface promotion (Stage 0a). The 10 promoted std bricks
# stay under `std-surface`. The UNPROMOTED constructs — genuine collapsing
# aggregate (tuple) returns, type-variable generics, and `region { }` — are
# re-gated behind this experimental flag. Under a plain `std-surface` build
# those constructs FAIL LOUD at lowering (a clear compile error, never a
# silent const-0/i64 collapse). Enabling this flag restores the prior
# best-effort lowering for them. `default` stays `[]`; the bit-identity hot
# path is untouched.
std-surface-experimental = ["std-surface"]
ffi-examples = []
# Post-quantum evidence-chain signing (RFC 0021 §6). Enables ML-DSA-65 (FIPS-204)
# and the hybrid ed25519+ML-DSA scheme in `mindc build --emit-evidence` and
# `mindc verify`. OFF by default: the classical ed25519 layer is always available
# (hand-rolled, zero deps); ML-DSA pulls the optional `fips204` crate. The
# determinism/keystone gate builds WITHOUT this feature, so the trace_hash anchor
# is untouched (signatures are metadata after the MAP sentinel).
evidence-mldsa = ["fips204"]
pkg = ["tar", "flate2", "sha2"]
registry = []
python-bindings = ["pyo3"]
aot = ["mlir-build", "mlir-lowering", "autodiff"]
full = ["aot", "autodiff", "cpu-exec", "cpu-conv", "pkg", "ffi-c"]

[build-dependencies]
cc = "1"
